Set notes btn and lines on body

--- a/PianoRoll/nbproject/project.properties
+++ b/PianoRoll/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/PianoRoll.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jsyn-20171016.jar=src/resources/libs/jsyn-20171016.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.jsyn-20171016.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
