--- a/PianoRoll/pianoroll.properties
+++ b/PianoRoll/pianoroll.properties
@@ -1,5 +1,6 @@
-#Wed Feb 21 09:40:51 CET 2018
-key_count_note_btns=8
+#Thu Mar 08 16:16:35 CET 2018
+key_count_note_btns=4
 key_bpm=120
-key_min_freq=200
-key_max_freq=500
+key_count_misure_btns=2
+key_min_freq=440
+key_max_freq=1000
