--- a/PianoRoll/nbproject/project.properties
+++ b/PianoRoll/nbproject/project.properties
@@ -30,12 +30,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.jMusic1.6.4.jar=/Users/MacBook/Downloads/jMusic1.6.4.jar
+file.reference.jMusic1.6.5.jar=../jMusic1.6.5.jar
 file.reference.jsyn-20171016.jar=src/resources/libs/jsyn-20171016.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jsyn-20171016.jar}:\
-    ${file.reference.jMusic1.6.4.jar}
+    ${file.reference.jMusic1.6.4.jar}:\
+    ${file.reference.jMusic1.6.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
