--- a/PianoRoll/pianoroll.properties
+++ b/PianoRoll/pianoroll.properties
@@ -1,6 +1,7 @@
-#Thu Mar 08 16:16:35 CET 2018
-key_count_note_btns=4
-key_bpm=120
+#Sun Mar 11 19:02:11 CET 2018
+key_bpm=100
+key_count_note_btns=2
+key_oscillator=Wave
 key_count_misure_btns=2
-key_min_freq=440
-key_max_freq=1000
+key_min_freq=400
+key_max_freq=600
