--- a/PianoRoll/pianoroll.properties
+++ b/PianoRoll/pianoroll.properties
@@ -1,7 +1,7 @@
-#Sun Mar 11 19:02:11 CET 2018
-key_bpm=100
+#Thu Mar 15 11:41:28 CET 2018
+key_bpm=60
 key_count_note_btns=2
-key_oscillator=Wave
-key_count_misure_btns=2
+key_oscillator=Sine
+key_count_misure_btns=1
 key_min_freq=400
 key_max_freq=600
