--- a/PianoRoll/pianoroll.properties
+++ b/PianoRoll/pianoroll.properties
@@ -1,7 +1,7 @@
-#Thu Mar 15 11:53:33 CET 2018
+#Thu Mar 15 15:04:31 CET 2018
 key_count_note_btns=2
 key_bpm=60
-key_oscillator=Sine
+key_oscillator=Saw
 key_count_misure_btns=2
 key_min_freq=400
 key_max_freq=600
